# 0011_Stok

./: README.md  app.py  build.py  installer.iss  pyproject.toml  run_ocr_app.bat
.obsidian/: workspace.json
.omc/: project-memory.json
.omc/sessions/: 2fb3e1dd-26df-49aa-aa36-13952840edd2.json  67861394-465a-4c4e-8f42-07ed79ea3286.json  9f53ab99-8f73-4183-b464-1cd04739b69d.json  c59f0e23-4f6e-46d5-b2d7-84b59de12b78.json  e16147ce-42d9-4d34-9730-7a2811f1ab7d.json
.omc/state/: agent-replay-3c8a7063-fe1c-496d-90d6-7460efb5f8e9.jsonl  hud-state.json  hud-stdin-cache.json  (+9 more)
.streamlit/: config.toml
assets/: .gitkeep
doc/: d0001_prd.md  d0002_plan.md  d0003_test.md  d0008_user.md  d0010_history.md  d0011_code_review.md  d0012_ai_trading_research.md  d0013_program_overview.md
logs/: stokai.log.2026-03-16
src/: app.py  config.py  main.py  service_container.py
tests/: conftest.py  test_ai_scorer.py  test_ai_settings_view.py  test_ai_signal_card.py  test_ai_status_indicator.py  test_alert_manager.py  test_alert_view.py  test_api_routes.py  test_app.py  test_app_integration.py  test_app_lock.py  test_app_state.py  test_backtest_engine.py  test_backtest_view.py  test_build_helper.py  test_chart_analyzer.py  test_chart_view.py  test_config.py  test_constants.py  test_credential_manager.py  test_dark_theme.py  test_dashboard.py  test_database.py  test_encryption.py  test_event_queue.py  test_exporter.py  test_glass_card.py  test_kill_switch.py  test_kiwoom_bridge.py  test_kiwoom_server.py  test_kiwoom_wrapper.py  test_left_panel.py  test_llm_service.py  test_logger.py  test_main.py  test_market_classifier.py  test_models.py  test_naver_crawler.py  test_news_analyzer.py  test_news_manager.py  (+29 more)
(+90 files in other folders)
